--- a/_posts/2000-12-29-raster.md
+++ b/_posts/2000-12-29-raster.md
@@ -20,11 +20,15 @@ tags : [intro, raster, data types]
 - Recognize a few spatial raster formats
 - Insepect and understand raster data in QGIS
 
+#### Exercise: [Introduction to raster data in QGIS](#raster-exercise)
+
+<!--
 #### Data: 
 
 iRods access: <br>&nbsp;&nbsp;&nbsp;``/iplant/home/shared/aegis/Spatial-bootcamp/basics/raster``
 
 - [Oregon state GTOPO30 DEM (gt30w140n90_oregon.tif](http://de.iplantcollaborative.org/dl/d/A813B989-EF8E-47B4-88F3-1B1FC9D7D6BC/gt30w140n90_oregon.tif)
+-->
 
 ----
 
@@ -90,7 +94,7 @@ Spectral Resolution
 
 Radiometric Resolution
   : Number of differences in brightness that can be detected (number of shades)
-
+<a name="raster-exercise"></a>
 ----
 
 ## Exercise
