--- a/_posts/2000-12-30-vector.md
+++ b/_posts/2000-12-30-vector.md
@@ -18,11 +18,16 @@ tags: [vector, data types]
  - Recognize a few spatial data formats.
  - Import and understand vector data in QGIS
 
+#### Exercise: [Introduction to vector data in QGIS](#vector-exercise)
+
+
+<!--
 #### Data: 
 
 iRods access: <br>&nbsp;&nbsp;&nbsp;``/iplant/home/shared/aegis/Spatial-bootcamp/basics/vector``
 
 - [Arizona Counties boundaries (shapefile)](http://de.iplantcollaborative.org/dl/d/31085E1F-F3E3-4E30-8848-FC14011E6015/arizona_counties.zip)
+-->
 
 ----
 
@@ -63,8 +68,9 @@ Polygon
 ### Data formats
 
  * Shapefile: Stores point, line, and polygon data. This file type is actually made up of a collection of files with the following endings: These are mandatory: .shp, .shx, .dbf There are many others which are optional, including the important .prj file that describes the projection information for that data.
- * File/Personal Geodatabase: Esri proprietary spatial database. Very easy to load data into, not so easy to extract. Newer version of QGIS (2.8) is configured by default to read proprietary Esri geodatabases.
+ * File/Personal Geodatabase: Esri proprietary spatial database. Very easy to load data into, not so easy to extract. Newer version of QGIS (2.8) is configured by default to read proprietary Esri geodatabases.<a name="vector-exercise"></a>
  * GeoJSON: Encodes points, lines, and polygons (and collections of those) along with information about them using JSON (JavaScript Object Notation). This format is popular for web maps.
+
 
 ----
 
