--- a/_posts/2000-12-31-overview.md
+++ b/_posts/2000-12-31-overview.md
@@ -16,6 +16,10 @@ tagline:
 - Introduction to spatial data
 - Introduction to QGIS
 
+#### Exercise: [QGIS Introduction](#qgis-exercise)
+
+----
+
 ## Is Spatial Special?
 
 There have been numerous discussions about the nature of spatial data and whether or not there is anything special about spatial information. Since the Open Geospatial Consortium(OGC) created the Simple Features for SQL specification in 1999, spatial data can be stored alongside other data types as just another column in a table. However, if you look for it, you can see a lot of GIS professionals evangelizing the difference between spatial data and *regular data*. Is there really a valid reason that spatial data is more unique than temporal or text data types? Is it just GIS professionals trying to sell their expertise as a separate field?
@@ -35,11 +39,17 @@ The simple features for SQL defined a simple feature as a feature with all geome
 ----
 
 ## Rasters and Vectors
+
+<a name="qgis-exercise"></a>
+
 There are two main families of spatial data which are each used for a specific function. Vector data, which represents discrete phenomena such as bus stations, and Raster data which represents continuous phenomena like temperature.
+
 
 ----
 
 ## Exercise:
+
+This exercise is simply a walkthrough of QGIS. It will cover the basics of the GUI and its layout, project properties, geolagorithms, and Providers.
 
 ### QGIS brief overview
 
