--- a/_posts/2000-12-29-raster.md
+++ b/_posts/2000-12-29-raster.md
@@ -104,13 +104,13 @@ This exercise will introduce visualizing raster data in QGIS with common and sim
 <ol>
 <li>Import raster data
 <ol>
-<li>Open QGIS and load the Oregon GTOPO30 DEM through iRods access: <br>&nbsp;&nbsp;&nbsp;<code>/iplant/home/shared/aegis/Spatial-bootcamp/basics/raster</code><br><br>Or download here and <strong>Add Raster Layer</strong> <img src="{{BASE_PATH}}{{ASSET_PATH}}/images/add-raster.png"/>: <a href="http://de.iplantcollaborative.org/dl/d/A813B989-EF8E-47B4-88F3-1B1FC9D7D6BC/gt30w140n90_oregon.tif">Oregon GTOPO30 DEM</a>.<br><br>Your workspace should look like the image below:<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-1.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-1.png" alt="Spatial Data Bootcamp: QGIS - open raster layer"/>
+<li>Open QGIS and load the Oregon GTOPO30 DEM through iRods access: <br>&nbsp;&nbsp;&nbsp;<code>/iplant/home/shared/aegis/Spatial-bootcamp/basics/raster/gt30w140n90_oregon.tif</code><br><br>Or download here and <strong>Add Raster Layer</strong> <img src="{{BASE_PATH}}{{ASSET_PATH}}/images/add-raster.png"/>:<br> <a href="http://de.iplantcollaborative.org/dl/d/A813B989-EF8E-47B4-88F3-1B1FC9D7D6BC/gt30w140n90_oregon.tif">gt30w140n90_oregon.tif</a>.<br><br>Your workspace should look like the image below.<br><br>We're viewing a Digital Elevation Model (DEM). This represents the elevation of the given area. This GeoTIFF assigns the elevation to its cells, or pixels. So, we're actually visualizing cells with their associated values (elevation).<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-1.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-1.png" alt="Spatial Data Bootcamp: QGIS - open raster layer"/>
 </li>
 </ol>
 </li>
 <li>Raster histogram
 <ol>
-<li>Open the raster histogram: <em>Right-click layer (layer list) > Properties > Histogram</em><br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-2.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-2.png" alt="Spatial Data Bootcamp: QGIS - raster histogram"/>
+<li>Open the raster histogram: <em>Right-click layer (layer list) > Properties > Histogram</em><br><br>The histogram is a graphical representation of the raster value data.<br><br>Close the Layer Properties once you're finished viewing the histogram.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-2.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-2.png" alt="Spatial Data Bootcamp: QGIS - raster histogram"/>
 </li>
 </ol>
 </li>
@@ -119,12 +119,14 @@ This exercise will introduce visualizing raster data in QGIS with common and sim
 <li>Zoom in close enough to see the actual pixels of the raster.<br><br>Do you see a difference between a raster and a vector?<br><br>Remember, vector data are <em>points, or points connected by lines</em>, while raster data are <em>stored in cells or arrays</em>.<br><br>You can use the <strong>Identify Features</strong> <img src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-identify.png"/> tool to click on data visualized on the map canvas to view its attributes.<br><br><img src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-3.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-3.png" alt="Spatial Data Bootcamp: QGIS raster data"/></li>
 </ol>
 </li>
-<li>Style
+<li>Style<br><br>
+Styling data is the fun part. Sometimes it's good practice to add color to your data to better understand and visualize.<br><br>
 <ol>
 <li>Open the raster <strong>Properties</strong>: <em>Right-click layer (layer list) > Proper > Style</em><br><br>Configure your settings as follow, within the <strong>Band Rendering</strong> section:<br><ul><li>Render type: Singleband pseudocolor</li><li>Load actual min/max values: <ul><li>Load min/max values: Min/Max</li><li>Accuracy: Actual (slower)</li><li>Click LOAD</li></ul></li><li>Generate new color map: (select color, invert if necessary)</li><li>Click CLASSIFY</li><li>Click APPLY and OK to save changed and return to the map</li></ul><br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-4.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-4.png" alt="Spatial Data Bootcamp: QGIS - style raster"/><br><br>You should now be visualizing your DEM with color.<br><br>Keep in mind, the legend below (displayed below the layer name in the layer list) reads: values 1 to 827.74 = green, 827.75 to 1654.49 = light green, and so on. Highest points (cells) of elevation are viualized in red.<br><br>Changing the number of classifications, or increasing the number of range of values will visualize the raster differently.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-5.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/raster-5.png" alt="Spatial Data Bootcamp: QGIS - visualize raster"/></li>
 </ol>
+<br><br>You've now been introduced to raster data and styling in QGIS.<br><br>
+You do not need to save this project.<br><br>
 </li>
-<li>You've now been introduced to raster data in QGIS. No need to save this project or data. Move on to the next lesson</li>
 </ol>
 
 <hr>
