--- a/_posts/2000-12-30-vector.md
+++ b/_posts/2000-12-30-vector.md
@@ -88,15 +88,15 @@ This next exercise will explain the basics of importing, inspecting, and styling
 <ol>
 <li>iRods is accessed through the <strong>iRods</strong> tool icon, or <em>Menu Bar > Plugins > iRods</em>. If the iRods plugin does not display then you either don't have it installed, or it has been disabled.<br><br>Once opened, enter your <strong>iPlant username and password</strong>:<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/vector-irods-1.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/vector-irods-1.png" alt="Spatial Data Bootcamp: QGIS - iRods"/><br><br></li>
 <li>Navigate to <code>/iplant/home/shared/aegis/Spatial-bootcamp/basics/vector</code></li> 
-<li>Within the <code>/vector/</code> directory, click (to highlight) <strong>arizona_counties.shp</strong>, then <strong>import</strong>.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-irods-2.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-irods-2.png" alt="Spatial Data Bootcamp: QGIS - import vector data through iRods"/></li>
+<li>Within the <code>/vector/</code> directory, click (to highlight) <strong>arizona_counties.shp</strong>, then <strong>import</strong>.<br><br>Notice the other files also named <b>arizona_counties</b>, but have different file extensions (not .shp). These are the files that hold information about the shapefile, but we do not import these into QGIS. QGIS will read them through the .shp. So, only import .shp.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-irods-2.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-irods-2.png" alt="Spatial Data Bootcamp: QGIS - import vector data through iRods"/></li>
 <br><br>
 </ol>
 </li>
 
-<li>Download zip:<br>&nbsp;&nbsp;&nbsp;<a href="http://de.iplantcollaborative.org/dl/d/31085E1F-F3E3-4E30-8848-FC14011E6015/arizona_counties.zip">arizona_counties.zip</a><br><br>
+<li>The non-iRods method: download, unzip, and import <b>arizona_counties.shp</b>:<br><br>&nbsp;&nbsp;&nbsp;Click to download:<br>&nbsp;&nbsp;&nbsp;<a href="http://de.iplantcollaborative.org/dl/d/31085E1F-F3E3-4E30-8848-FC14011E6015/arizona_counties.zip">arizona_counties.zip</a><br><br>
 <ol>
-<li> For non-iRods access, download, unpack ,and import the Arizona Counties shapefile by clicking the <strong>Add Vector Layer</strong> <img src="{{BASE_PATH}}{{ASSET_PATH}}/images/add-vector.png"/> button in the Toolbar, or by navigating through <em>Menu Bar > Add Layer > Add Vector Layer.</em><br><br>Subsequent exercises will refer to adding data through the buttons in the Toolbar.<br><br></li>
-<li> Click <strong>Browse</strong> to locate the shapefile: arizona_counties.shp<br><br><strong>Reminder:</strong> A shapefile contains 5 files, however only open the &#42;.shp extension in QGIS (or other GIS applications)<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-1.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-1.png" alt="QGIS - Add vector layer"/></li>
+<li>Import the Arizona Counties shapefile by clicking the <strong>Add Vector Layer</strong> <img src="{{BASE_PATH}}{{ASSET_PATH}}/images/add-vector.png"/> button in the Toolbar, or by navigating through <em>Menu Bar > Add Layer > Add Vector Layer.</em><br><br>Subsequent exercises will refer to adding data through the buttons in the Toolbar.<br><br></li>
+<li> Click <strong>Browse</strong> to locate the shapefile: <b>arizona_counties.shp</b><br><br><strong>Reminder:</strong> A shapefile contains 5 files, however only open the &#42;.shp extension in QGIS (or other GIS applications)<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-1.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-1.png" alt="QGIS - Add vector layer"/></li>
 <li> We are now visualizing counties in Arizona.<br><br>
 <strong>Think about it:</strong> We are not actually visualizing the single boundary of Arizona, but the boundaries of its counties which complete the boundary of Arizona.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-2.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-2.png" alt="Spatial Data Bootcamp: QGIS - viewing vector data"/></li>
 </ol>
@@ -126,7 +126,7 @@ You can change the symbolism of the data by clicking on the dropdown list (defau
 <li>
 Once in the <em>Categorized</em> menu, configure as follows:<br><ul><li>Column: NAME_2</li><li>Color ramp: Random colors</li><li>Click <strong>Classify</strong> to add the data classifications from the column <strong>NAME_2</strong>.</li></ul><br>If you remember from looking at our Arizona counties attributes, you'll know that <strong>NAME_2</strong> represents the county name of each county.<br><br>Click <strong>Apply</strong> then <strong>OK</strong> to update changes.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-8.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-8.png" alt="Spatial Data Bootcamp: QGIS - Arizona county categorized by county name"/><br><br>
 </li>
-<li>Your map should now look similar to the one below; categorized by county name (NAME_2) with random colors.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-9.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-9.png" alt="Spatial Data Bootcamp: QGIS - symbolized by county name"/><br><br>Close your worspace- this will prompt to save your existing workspace; save if you must, else No. 
+<li>Your map should now look similar to the one below; categorized by county name (NAME_2) with random colors.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-9.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-9.png" alt="Spatial Data Bootcamp: QGIS - symbolized by county name"/><br><br>You have now been introduced to <b>shapefiles</b>.<br><br>Refer to this exercise in the event that you have trouble importing shapefiles into QGIS.<br><br>Close your worspace- this will prompt to save your existing workspace; save if you must, else No. 
 </li>
 </ol>
 </ol>
