--- a/_posts/2000-12-30-vector.md
+++ b/_posts/2000-12-30-vector.md
@@ -126,7 +126,7 @@ You can change the symbolism of the data by clicking on the dropdown list (defau
 <li>
 Once in the <em>Categorized</em> menu, configure as follows:<br><ul><li>Column: NAME_2</li><li>Color ramp: Random colors</li><li>Click <strong>Classify</strong> to add the data classifications from the column <strong>NAME_2</strong>.</li></ul><br>If you remember from looking at our Arizona counties attributes, you'll know that <strong>NAME_2</strong> represents the county name of each county.<br><br>Click <strong>Apply</strong> then <strong>OK</strong> to update changes.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-8.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-8.png" alt="Spatial Data Bootcamp: QGIS - Arizona county categorized by county name"/><br><br>
 </li>
-<li>Your map should now look similar to the one below; categorized by county name (NAME_2) with random colors.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-9.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-9.png" alt="Spatial Data Bootcamp: QGIS - symbolized by county name"/><br><br>You have now been introduced to <b>shapefiles</b>.<br><br>Refer to this exercise in the event that you have trouble importing shapefiles into QGIS.<br><br>Close your worspace- this will prompt to save your existing workspace; save if you must, else No. 
+<li>Your map should now look similar to the one below; categorized by county name (NAME_2) with random colors.<br><br><img data-featherlight="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-9.png" src="{{BASE_PATH}}{{ASSET_PATH}}/images/qgis-intro-9.png" alt="Spatial Data Bootcamp: QGIS - symbolized by county name"/><br><br>You have now been introduced to <b>shapefiles</b>.<br><br>Refer to this exercise in the event that you have trouble importing shapefiles into QGIS.<br><br>Close your workspace- this will prompt to save your existing workspace; save if you must, else No. 
 </li>
 </ol>
 </ol>
